[build-system]
requires = ["maturin>=1.2.1"]
build-backend = "maturin"

[project]
name = "dsds"
version = "0.0.35"
requires-python = ">=3.9"
authors = [
    {name = "Tianren Qin", email = "tq9695@gmail.com"}
]

license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "polars >= 0.19.9",
] 


[tool.ruff]
line-length = 120
fix = true
src = ["python"]
